crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_005.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 0
payload:
  BasePlayerCreate:
    component_data:
      - 1
      - 0
      - 0
      - 0
      - 2
    entity_id: 433435
    entity_type: Avatar
    props:
      attrs: 17935783428105
