crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_011.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 2
payload:
  EntityControl:
    entity_id: 433435
    is_controlled: false
